--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,36 @@
 * {
   box-sizing: border-box;
 }
-
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Karla', sans-serif;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.App h1 {
+  font-size: 2rem;
+}
+button {
+  padding: 5px 25px;
+  font-size: 1rem;
+  font-family: 'Lato';
+}
+button:hover {
+  cursor: pointer;
+}
+button[type="submit"] {
+  float: right;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 img {
-  width: 100%;
+  max-width: 100%;
 }
 
 ul {
@@ -27,8 +40,14 @@ ul {
 li {
   list-style-type: none;
 }
+a {
+  text-decoration: none;
+}
 .App {
   padding: 15px;
   max-width: 980px;
   margin: auto;
+}
+.error {
+  color: red;
 }
